test/subjects/errors/continue_outer.php
<?php

	continue; // { Error: Cannot break/continue 1 levels }
?>
